Added GET /api/functions
